--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-      "dev": "nodemon api/index.js",
-      "start": "node api/index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongoose": "^8.2.0",
+    "mongose": "^0.0.2-security",
     "nodemon": "^3.1.0"
   }
 }
